feat: Add updatePassword route
